@@ -2,6 +2,8 @@ version 0.8-0
 
 o hetcor() can optionally use parallel computations (suggestion of Marc Segond).
 
+o polychor() and polyserial() now allow user-specified start values (suggestion of someone whose name is lost to antiquity, with my apologies).
+
 version 0.7-10
 
 o Let hetcor() work with objects that inherit from "data.frame" (suggestion of Emil O. W. Kirkegaard).
